# allot

./: .gitignore  ACCESSIBILITY_SERVICE_FIX.md  ACCESSIBILITY_SERVICE_SETUP_GUIDE.md  APP_DETECTION_GUIDE.md  AUTOMATIC_SENDING_FIXED.md  App.js  BACKGROUND_CAPTURE_DEEP_ANALYSIS.md  BACKGROUND_CAPTURE_TROUBLESHOOTING.md  BACKGROUND_FIX_SUMMARY.md  BACKGROUND_NETWORK_FIXES_COMPLETE.md  BACKGROUND_PROCESSING_FIX.md  BACKGROUND_PROCESSING_FIXES.md  BLUR_EFFECT_IMPLEMENTATION.md  BUILD_SUCCESS_SUMMARY.md  CAPTURE_CONFLICT_FIX.md  CRASH_FIX.md  CRITICAL_FIX_LOW_RAM_DEVICES.md  DEBUG_SCREEN_CAPTURE.md  DEBUG_SERVICE_STARTUP.md  ENHANCED_LOGGING_AND_2STATE_SYSTEM.md  FINAL_IMPROVEMENTS.md  FIXES_APPLIED.md  HYBRID_SYSTEM_CORRECTED.md  IMPROVED_WAR_DETECTION.md  LIVE_EXTRACTION_FLOW.md  LOCAL_EXTRACTION_FIX_SUMMARY.md  LOCAL_ONLY_SYSTEM_COMPLETE.md  LOCAL_TEXT_EXTRACTION_CYCLE_FIXES.md  LOCAL_TEXT_EXTRACTION_FIXES.md  LOCAL_TEXT_EXTRACTION_SUMMARY.md  LOOP_ISSUES_FIXED.md  MERGED_SYSTEM_COMPLETE.md  MIUI_BATTERY_OPTIMIZATION_SOLUTION.md  MODEL_UPDATE.md  NATIVE_BACKEND_COMPLETE.md  NATIVE_CAPTURE_LOOP_FIX.md  NETWORK_ISSUE_FIXED.md  NETWORK_UPDATE_COMPLETE.md  NOTIFICATION_DEBUG.md  PERFORMANCE_OPTIMIZATION_FINAL.md  (+103 more)
android/: .last_device  settings.gradle
app/: _layout.tsx  battery-optimization.tsx  permissions.tsx  phase4-demo.tsx  screen-capture.tsx
components/: BitmapMemoryMonitor.tsx  loading-screen.tsx
constants/: config.ts
docs/: ADD_NEW_FEATURES_GUIDE.md  IP_CHANGE_GUIDE.md  (+5 more)
rust-backend/: .env.example  Cargo.toml  test-backend.sh
rust-backend/src/: main.rs
(+82 files in other folders)
